--- a/app/static/css/profileuitheme.css
+++ b/app/static/css/profileuitheme.css
@@ -34,7 +34,7 @@ body{
 .grid-container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 72px 1fr 50px;
+    grid-template-rows: 56px 1fr 56px;
     grid-template-areas:
       'header'
       'main'
@@ -46,14 +46,14 @@ body{
     grid-area: header;
     border-bottom: 2px solid hsl(210, 23%, 95%);
     box-shadow: 0 4px 6px hsla(0, 0%, 0%, .2);
-    background-color: hsl(0, 0%, 100%);
-  }
+    background-color: hsl(0, 0%, 100%)
+}
   
  
  
   .main {
     grid-area: main;
-    background-color: hsl(210, 100%, 98%);
+    background-color:  hsl(203, 100%, 98%);
   }
   
   .footer {
@@ -65,14 +65,38 @@ body{
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding: 0 16px;
+    padding:8px;
     
   }
   .header__items{
-    margin-left: 1.5rem;
+    margin-right: 4rem;
+    margin-left: .5rem;
+    display: flex;
+    justify-content: space-between;
+    padding: .5rem;
+    
   }
-
-
+  .header__avatar{
+    padding:0  0.5rem;
+  }
+  .detail-info{
+    display: flex;
+    flex-direction: column;
+  }
+  .solde-joueur{
+    margin-top: .5rem;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    font-size: 13px;
+    color:hsl(0, 0%, 7%);
+    
+  }
+  .joueur{
+    font-size: 17px;
+    font-weight: 500;
+    color: hsl(120, 4%, 40%);
+   
+  }
   .sidenav__list {
     padding: 0;
     /* margin-top: 85px; */
@@ -80,25 +104,55 @@ body{
   }
 
   .sidenav__list-item {
+    margin-top:.75rem ;
     padding: 1.25rem ;
-    color: #ddd;
+    color: hsl(203, 100%, 98%);
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
   }
+  .logo-app{
+     /* padding: 2.25rem; */
+     margin-top: .75rem;
 
+  }
+  .logo-name{
+    width: 128px;
+    height: 64px;
+    border-radius: 350px / 64px;
+    border: 2px solid hsl(151, 100%, 45%);
+    
+    
+    padding: .65rem;
+    color: hsl(203, 100%, 98%);
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
+    
+  }
   .sidenav__list-item:hover {
     background-color: rgba(255, 255, 255, 0.2);
     cursor: pointer;
   }
-
-  .main-header {
+  .select-op{
     display: flex;
-    flex-direction: column;
-    margin: 20px;
-    padding: 20px;
-    height: 150px; /* Force our height since we don't have actual content yet */
+    align-items: center;
+    justify-content: center;
+    padding: .5rem;
     
-    color: slategray;
+  }
+  .op{
+    border: 2px solid hsl(210, 23%, 95%);
+    padding: .25rem;
+    margin-left: .5rem;
+    border-radius: .2rem;
+  }
+  .main-header {
+    
+    margin: 8px;
+   
+     /* Force our height since we don't have actual content yet */
+    
+    
   }
   .name {
     font-size: calc(1rem+1vw);
@@ -119,11 +173,11 @@ body{
 
   height: 2px;
       
-      background-image: linear-gradient(90deg, hsl(56, 96%, 51%), transparent);
-      
-      border: 0;
-      
-      margin-left:  0;
+  background-image: linear-gradient(90deg, hsl(56, 96%, 51%), transparent);
+  
+  border: 0;
+  
+  margin-left:  0;
   }
   .menu-icon {
     position: fixed;
@@ -142,21 +196,20 @@ body{
   }
   
   /* Make room for the menu icon on mobile */
-  .header__search,.logout {
-
-   padding: 8px;
-   font-size: 18px;
-   border: 1px solid hsl(210, 23%, 95%);
-   
-   background-color: hsl(203, 100%, 98%);;
-   border-radius: .2em;
-  }
-  .header__search a ,.logout a{
-    text-decoration: none;
+ 
+  .header__search a {
+      text-decoration: none;
     
-     color: hsl(0, 0%, 4%);
+     color: hsl(220, 100%, 43%);
+     
      
    }
+
+  .header__search a span{
+    font-size: 1.40rem;
+    font-weight: 700;
+  }
+   
    .header__search a:hover,.logout a:hover {
     
     
@@ -174,6 +227,9 @@ body{
     
     width: 40px;
    }
+   #image{
+    border-radius: .2rem;
+   }
   
   /* Mobile-first side nav styles */
   .sidenav {
@@ -187,11 +243,36 @@ body{
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
     z-index: 2; /* Needs to sit above the hamburger menu icon */
 
-    background:hsl(0, 0%, 5%);
+    background: hsl(0, 0%, 7%);
     transform: translateX(-245px);
     transition: all .6s ease-in-out;
   }
-  
+  .logout-item {
+      
+      text-decoration: none;
+      color: hsl(203, 100%, 98%);
+      
+      padding: 1.25rem;
+      cursor: pointer;
+     
+      
+      font-size: 15px;
+      background-color: rgba(255, 255, 255, 0.2);
+
+    }
+    .logout-item span {
+      margin-left: .75rem;
+      padding: .25rem;
+      background: hsl(48, 100%, 67%); 
+      border-radius: .2rem;
+      color:hsl(0, 0%, 7%) ;
+     
+    } 
+    .logout-item:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      cursor: pointer;
+    }
+    
   /* The active class is toggled on hamburger and close icon clicks */
   .sidenav.active {
     transform: translateX(0);
@@ -205,7 +286,7 @@ body{
     right: 12px;
     cursor: pointer;
     font-size: 28px;
-    color: hsl(136, 60%, 47%);
+    color: hsl(151, 100%, 45%);
   }
   .logo-app{
     
@@ -219,7 +300,7 @@ body{
     display: flex;
     padding: 1.25rem;
     background: linear-gradient(89deg, rgb(21, 74, 189) 0.1%, rgb(26, 138, 211) 51.5%, rgb(72, 177, 234) 100.2%);
-    border-radius: 0.2em;
+    border-radius: .25rem;
     
   }
   .main__logo{
@@ -230,19 +311,19 @@ body{
     line-height: 1.5;
     text-align: left;
     justify-content: left;
-    margin-left: 2.5rem;
+    margin-left: 1rem;
     hyphens: auto;
     color:white;
     margin-bottom:1.25rem;
   }
   .main__description h2{
-    margin-left: 2.5rem;
+    margin-left: 1rem;
     color: white;
     margin-bottom: 1rem;
 
   }
   .main__description button{
-    margin-left: 2.5rem;
+    margin-left: 1rem;
     
     
     width: 35%;
@@ -261,6 +342,25 @@ body{
   border-radius: .2em;
   border:1px solid white;
 
+  }
+
+  .deposit-retrait{
+    background-color: hsl(0, 0%, 100%);
+    
+    
+  }
+  .grid-item-header{
+    display: flex;
+
+    align-items: center;
+  }
+  .grid-item-header  h3{
+
+     font-size: 16px;
+    font-weight: 500;
+    color: hsl(120, 4%, 40%);
+   
+    
   }
   /* Non-mobile styles for side nav responsiveness, 750px breakpoint */
   .modal {
@@ -326,7 +426,7 @@ body{
    outline: none;
   }
   
- 
+  
   button {
     cursor: pointer;
     border: none;
@@ -428,7 +528,54 @@ body{
     .sidenav {
       display: flex;
       flex-direction: column;
+      
     }
+    .logout-item {
+      margin-top: auto;
+      
+    }
+    .main-header {
+    
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+
+        grid-template-rows: repeat(2, auto);
+       
+        max-width: 1080px;
+        padding: 8px;
+        
+    }
+
+
+    .main_description{
+      width: auto;
+      padding:0.5rem;
+      grid-column: 1/2;
+      grid-row: 1/2;
+      background-color: hsl(0, 0%, 100%);
+      box-shadow: 0 1px 3px hsla(0, 0%, 0%, .2),  0 1px 2px hsla(0, 0%, 0%, .24);
+    }
+    .main_jeu{
+      width: auto;
+      padding: .5rem;
+      grid-column: 1/2;
+      grid-row: 2/3;
+      
+      box-shadow: 0 1px 2px hsla(0, 0%, 0%, .2) , 0 1px 2px hsla(0, 0%, 0%, .24);
+      background-color: hsl(0, 0%, 100%);
+    } 
+
+    .main_quickpay{
+      width: auto;
+      margin-left: 1.5rem;
+     
+      grid-column: 2/3;
+      background-color: hsl(203, 100%, 98%);
+      padding: .5rem;
+      grid-row: 1/3;
+     
+    }
+
     .sidenav {
         position: relative; /* Fixed position on mobile */
         transform: translateX(0);
@@ -445,3 +592,141 @@ body{
    
   }
 
+
+  .tabs{
+  
+    height: 48px;
+    display: flex;
+    
+    align-items: center;
+    justify-content: center;
+    
+   
+  }
+  .tab{
+   
+    height: 100%;
+    width: 100%;
+    
+    text-align: center;
+    
+    border-bottom: 2px solid hsl(210, 23%, 95%);
+    cursor: pointer;
+  }
+ 
+  .tab:last-child{
+    border-left: 2px solid hsl(210, 23%, 95%);
+  }
+  .tab p{
+    margin-top:14px;
+    font-size: 16px;
+    font-weight: 500;
+    color: hsl(120, 4%, 40%);
+    
+  }  
+  
+  .boxcontent{
+    margin-top: 1rem;
+  }
+
+  .fields:first-child{
+    margin-top: 1rem;
+  }
+  .fields ,.field-btn{
+
+    display: flex;
+
+    justify-content: center;
+    padding: 0.25rem;
+  }
+
+  .fields input:not([type=checkbox]):not([type=radio]){
+    display: block;
+    margin-top: 20px;
+    margin-bottom:4px;
+    max-width: 200px;
+    width:100% ;
+    height: 32px;
+    font-size: calc(1rem+1vw);
+    line-height: 1.25;
+    
+    background-color: hsl(207, 17%, 90%);
+    border: 1px solid hsl(207, 17%, 90%);
+    border-radius: .2em;
+    color:  hsl(210, 60%, 4%);
+    font-weight: 400;
+ }
+ .fields input:focus {
+  outline: none;
+  }
+  ::placeholder{
+    
+    font-size: calc(1rem+1vw);
+    line-height: 1.25;
+    color:hsl(207, 28%, 30%);
+    
+  }
+  input[type=button]{
+    
+  border: none;
+  color: hsl(0, 0%, 96%);
+  background-color: hsl(220, 100%, 43%);;
+  display: block;
+    
+  margin-bottom:24px;
+  max-width: 200px;
+  width:100% ;
+  height: 32px;
+  font-size: calc(1rem+1vw);
+  line-height: 1.25;
+  cursor: pointer;
+  font-size: 13px;
+  line-height: 1.255;
+  font-weight: 400;
+  text-transform: capitalize;
+  
+ 
+  justify-content: right;
+  border-radius: .2em;
+  
+
+  
+}
+input[type=button]:hover{
+  transform: scale(1.02) translateY(-4px);
+
+
+
+}
+input[type=button]:active{
+  transform: scale(0.98) translateY(-2px);
+
+
+
+}
+.boxcontent {
+  display: none;
+}
+.boxcontent.active {
+  display: block;
+  
+}
+.tablinks.active{
+  border-bottom: 2px solid hsl(220, 100%, 45%);
+  
+  transition: all 0.3s ease;
+  
+  animation: fade 0.5s forwards;
+}
+.tab-item-1{
+  margin-right: 2px;
+}
+ @keyframes fade{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+ 
