--- a/app/static/css/profileuitheme.css
+++ b/app/static/css/profileuitheme.css
@@ -34,7 +34,7 @@ body{
 .grid-container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 56px 1fr 56px;
+    grid-template-rows: 72px 1fr 56px;
     grid-template-areas:
       'header'
       'main'
@@ -53,12 +53,13 @@ body{
  
   .main {
     grid-area: main;
-    background-color:  hsl(203, 100%, 98%);
+     background-color:  hsla(0, 0%, 98%, 0.979);
+    /* background-color:  hsl(203, 100%, 98%); */
   }
   
   .footer {
     grid-area: footer;
-    
+    background-color:  hsla(0, 0%, 98%, 0.979);
   }
 
   .header{
@@ -91,11 +92,19 @@ body{
     color:hsl(0, 0%, 7%);
     
   }
+  .detail_solde_timestamp{
+    display: flex;
+  }
   .joueur{
     font-size: 17px;
     font-weight: 500;
     color: hsl(120, 4%, 40%);
    
+  }
+  .identifiant{
+    color: hsl(220, 100%, 27%);
+    font-size: 14px;
+    text-decoration: underline;
   }
   .sidenav__list {
     padding: 0;
@@ -105,33 +114,88 @@ body{
 
   .sidenav__list-item {
     margin-top:.75rem ;
-    padding: 1.25rem ;
-    color: hsl(203, 100%, 98%);
+    padding-top:2rem ;
+    padding-left:1.25rem ;
+    padding-right:1.25rem ;
+    padding-bottom:1.25rem ;
+    
+    /* display: flex; */
+    border-top:1px solid hsla(207, 17%, 90%,.2);
+    border-bottom:1px solid hsla(207, 17%, 90%,0.2);;
+    
+  }
+  .sidenav__list-item  h4{
+    
+    color: hsl(210, 0%, 100%);
+    line-height: 1.5;
+    margin-bottom: .5rem;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: .05rem;
+  }
+  .sidenav__list-item  p{
+    
+    color: hsl(207, 17%, 90%);
+    line-height: 1.5;
+    
+    font-size: 13px;
+   
+  }
+  .more-item{
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: center;
+    padding:1.25rem 0;
+   
+  }
+  .more-item a {
+    text-decoration: none;
+    font-size: 14px;
+    padding: 8px 10px;
+    color:  hsl(210, 0%, 100%);
+    border-radius: .2em;
+    
+    border:1px solid hsla(207, 17%, 90%,.2);
+   
   }
   .logo-app{
      /* padding: 2.25rem; */
-     margin-top: .75rem;
+     margin-top:1rem;
 
+  }
+  .nd{
+    padding: 4px;
+    font-style:normal;
+    border-radius: .1em;
+    background-color:hsl(151, 100%, 45%);
+    /* border: 2px solid hsl(151, 100%, 45%); */
+    
+  }
+  .st{
+    padding: 4px;
+    border-top-right-radius:none;
+    border-right:none ;
+    /* border-left: 2px solid hsl(151, 100%, 45%); */
+   
   }
   .logo-name{
     width: 128px;
     height: 64px;
     border-radius: 350px / 64px;
-    border: 2px solid hsl(151, 100%, 45%);
     
-    
-    padding: .65rem;
-    color: hsl(203, 100%, 98%);
+    font-style: italic;
+   
+    color: hsl(210, 0%, 100%);
     font-weight: 600;
-    font-size: 16px;
+    font-size: 22px;
     line-height: 1.5;
     
   }
-  .sidenav__list-item:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    cursor: pointer;
+  .online{
+    padding: 6px 8px;
+    font-size: 12px;
+    border-radius: .2em;
+    background-color: hsl(0, 100%, 67%);
+    color: hsl(210, 0%, 100%);
   }
   .select-op{
     display: flex;
@@ -141,7 +205,7 @@ body{
     
   }
   .op{
-    border: 2px solid hsl(210, 23%, 95%);
+    border: 2px solid hsl(210, 0%, 100%);
     padding: .25rem;
     margin-left: .5rem;
     border-radius: .2rem;
@@ -190,7 +254,7 @@ body{
     z-index: 1;
     cursor: pointer;
     padding: 12px;
-    border: 1px solid hsl(210, 23%, 95%);
+    border: 1px solid  hsl(210, 0%, 100%);
     color: hsl(0, 0%, 4%);
     background-color: hsl(203, 100%, 98%);;
   }
@@ -205,10 +269,10 @@ body{
      
    }
 
-  .header__search a span{
+  /* .header__search a span{
     font-size: 1.40rem;
     font-weight: 700;
-  }
+  } */
    
    .header__search a:hover,.logout a:hover {
     
@@ -243,9 +307,40 @@ body{
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
     z-index: 2; /* Needs to sit above the hamburger menu icon */
 
-    background: hsl(0, 0%, 7%);
+    background: hsl(144, 100%, 1%);
     transform: translateX(-245px);
     transition: all .6s ease-in-out;
+  }
+  .game-detail-item{
+    display: flex;
+    justify-content: space-between;
+    margin: .75rem 0;
+    color: white;
+    align-items: baseline;
+  }
+  .labels-item{
+    color:hsla(207, 18%, 90%, 0.212) ;
+    font-size: 14px;
+  }
+  #set_game{
+   color: hsl(220, 100%, 50%);
+  }
+  #number_game ,#date_game{
+    font-size: 13px;
+  }
+  #bet_game{
+    background-color: hsl(220, 100%, 50%);
+    width: 18px;
+    height: 18px;
+    text-align: center;
+    border-radius: 50%;
+    
+    color: hsl(144, 100%, 1%);
+  }
+  #statut_game{
+   font-style: italic;
+   color:hsla(207, 18%, 90%, 0.212) ;
+   font-weight: 600;
   }
   .logout-item {
       
@@ -313,12 +408,12 @@ body{
     justify-content: left;
     margin-left: 1rem;
     hyphens: auto;
-    color:white;
+    color: hsl(210, 0%, 100%);
     margin-bottom:1.25rem;
   }
   .main__description h2{
     margin-left: 1rem;
-    color: white;
+    color:  hsl(210, 0%, 100%);
     margin-bottom: 1rem;
 
   }
@@ -329,7 +424,7 @@ body{
     width: 35%;
     border: none;
   color: hsl(204, 97%, 38%);
-  background-color: white ;
+  background-color:  hsl(210, 0%, 100%) ;
   padding: 12px 16px;
   cursor: pointer;
   font-size: 13px;
@@ -345,7 +440,7 @@ body{
   }
 
   .deposit-retrait{
-    background-color: hsl(0, 0%, 100%);
+    background-color:  hsl(210, 0%, 100%);
     
     
   }
@@ -381,7 +476,7 @@ body{
     position: absolute;
     z-index: 1000;
     
-    background-color: white;
+    background-color:  hsl(210, 0%, 100%);
     border: 1px solid #ddd;
     border-radius: .2em;
   }
@@ -411,7 +506,7 @@ body{
     padding: .8rem;
     border: none;
     background: #30c056;
-    color: white;
+    color:  hsl(210, 0%, 100%);
     border-radius: .2em;
   }
   .modal select {
@@ -549,11 +644,11 @@ body{
 
     .main_description{
       width: auto;
-      padding:0.5rem;
+      
       grid-column: 1/2;
       grid-row: 1/2;
-      background-color: hsl(0, 0%, 100%);
-      box-shadow: 0 1px 3px hsla(0, 0%, 0%, .2),  0 1px 2px hsla(0, 0%, 0%, .24);
+      background-color:  hsl(210, 0%, 100%);
+     
     }
     .main_jeu{
       width: auto;
@@ -561,8 +656,8 @@ body{
       grid-column: 1/2;
       grid-row: 2/3;
       
-      box-shadow: 0 1px 2px hsla(0, 0%, 0%, .2) , 0 1px 2px hsla(0, 0%, 0%, .24);
-      background-color: hsl(0, 0%, 100%);
+     
+      background-color:  hsl(210, 0%, 100%);
     } 
 
     .main_quickpay{
@@ -570,7 +665,7 @@ body{
       margin-left: 1.5rem;
      
       grid-column: 2/3;
-      background-color: hsl(203, 100%, 98%);
+      background-color:  hsl(210, 0%, 100%);
       padding: .5rem;
       grid-row: 1/3;
      
@@ -669,7 +764,7 @@ body{
   input[type=button]{
     
   border: none;
-  color: hsl(0, 0%, 96%);
+  color:  hsl(210, 0%, 100%);
   background-color: hsl(220, 100%, 43%);;
   display: block;
     
