modification des fichiers

--- a/app/auth/templates/auth/signup.html
+++ b/app/auth/templates/auth/signup.html
@@ -11,9 +11,9 @@
 {% block content %}
 <div class="content has-main-centered">
 
-    <div class="content-picture content-item">
-
-    </div>
+    
+    <img src="{{url_for('static', filename = 'images/smallscreen.png')}}" alt="Quickash Dashboard"> 
+    
     <div class="content-item content-form-desc">
        <div class="content-desc">
             <h1 class="name">
