--- a/app/static/css/profileuitheme.css
+++ b/app/static/css/profileuitheme.css
@@ -360,7 +360,7 @@ body{
       padding: .25rem;
       background: hsl(48, 100%, 67%); 
       border-radius: .2rem;
-      color:hsl(0, 0%, 7%) ;
+      color: hsl(144, 100%, 1%);
      
     } 
     .logout-item:hover {
@@ -446,17 +446,201 @@ body{
   }
   .grid-item-header{
     display: flex;
-
+    
     align-items: center;
+    padding:1rem;
+    margin-top: 2.5rem;
+   
+    border-top: 1px solid  hsl(207, 17%, 90%);;
+    
   }
   .grid-item-header  h3{
-
-     font-size: 16px;
+    padding: 8px 10px;
+    background-color: hsl(207, 17%, 90%);
+    font-size: 13px;
     font-weight: 500;
-    color: hsl(120, 4%, 40%);
+    color: hsl(144, 100%, 1%);
+    margin-right: 32px;
+    border-radius: 20px;
    
     
   }
+  .grid-item-header-statut{
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+      
+  }
+
+  .grid-item-header-statut span{
+    
+    padding: 8px 6px;
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: .2em;
+    margin-right: 16px;
+      
+  }
+  #live{
+    color:hsl(0, 100%, 40%); ;
+    background-color: hsl(0, 100%, 88%);
+  }
+  #play{
+    background-color: hsl(151, 100%, 95%);
+     color: hsl(151, 100%, 20%);;
+  }
+  #wait{
+     background-color: hsl(48, 100%, 85%);
+     color: hsl(48, 100%, 47%);
+  }
+  .grid-item-main{
+    display: flex;
+    padding-left: 1rem;
+    align-items: center;
+    
+    
+  }
+  .display-header{
+      display: flex;
+      
+
+      align-items: center;
+      
+      
+  }
+  .elt{
+    
+    margin-right: .75rem;
+   
+    display: flex;
+    flex-direction: column;
+   
+    
+
+  }
+  #titletimes{
+
+    
+    padding-left:none;
+    font-weight: 500;
+    color: hsl(120, 4%, 40%);
+    font-size: 16px;
+    padding-right: 16px;
+    padding-top: 8px;
+    
+
+  }
+  #times{
+
+   margin-top:10px ;
+   display: flex;
+   justify-content: center;
+   font-size: 15px;
+   line-height: 1.5;
+   color:hsl(144, 100%, 1%);
+
+  }
+  .display-header-item{
+  
+    
+    padding-left:8px;
+    font-weight: 500;
+    color: hsl(120, 4%, 40%);
+    font-size: 16px;
+   
+
+  }
+  #card-numbers{
+
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: hsl(151, 100%, 27%); */
+    margin-top:10px ;
+ 
+   }
+   #set{
+
+   
+   
+    margin-top:8px ;
+ 
+   }
+   #card-set{
+    display: grid;
+
+    grid-template-columns: repeat(4, minmax(auto, 64px));
+    
+    width: auto;
+    height: auto;
+    grid-gap:0.5em ;
+   
+    /* display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center; */
+    /* background-color: hsl(151, 100%, 27%); */
+    margin-top:10px ;
+
+ 
+   }
+   .numeric{
+    border-radius: .2em;
+    
+    padding:8px 12px;
+    margin-right: 16px;
+    text-decoration: none;
+    color: hsl(210, 0%, 100%) ;;
+    background-color: hsl(220, 100%, 50%);
+   }
+   .mises{
+    border-radius: .2em;
+    background-color: hsl(207, 17%, 90%);
+    padding:8px 12px;
+    margin-right: 16px;
+    text-decoration: none;
+    color:hsl(144, 100%, 1%);
+    
+  }
+  #valueset,#valuenums,#log{
+
+   
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    /* background-color: hsl(151, 100%, 27%); */
+    margin-top:15px ;
+
+ 
+  }
+  .primary-btn-bet{
+    border: none;
+  color:  hsl(210, 0%, 100%);
+  background-color: hsl(151, 100%, 27%);
+  display: block;
+    
+  margin-top:1rem;
+  max-width: 64px;
+  width:100% ;
+  height: 32px;
+  font-size: calc(1rem+1vw);
+  line-height: 1.25;
+  cursor: pointer;
+  font-size: 13px;
+  line-height: 1.255;
+  font-weight: 400;
+  text-transform: capitalize;
+  
+  margin-left: 1.5rem;
+  
+ 
+  
+  border-radius: .2em;
+  }
+  
   /* Non-mobile styles for side nav responsiveness, 750px breakpoint */
   .modal {
     display: flex;
@@ -610,6 +794,12 @@ body{
   .hidden {
     display: none;
   } 
+  .main_jeu{
+    
+    
+    background-color:  hsl(210, 0%, 100%);
+  } 
+  
 @media only screen and (min-width: 46.875em) {
     /* Show the sidenav */
     .grid-container {
@@ -828,21 +1018,21 @@ input[type=button]:active{
 .win{
   display: inline-block;
   position: relative;
-  padding: 8px 12px;
+  padding: 8px 6px;
   border-radius: 20px;
   background-color: hsl(151, 100%, 30%);
-  color: hsl(144, 100%, 1%);;
-  font-size: 13px;
-  /* font-weight: bold; */
+  color: hsl(210, 0%, 100%);
+  font-size: 10px;
+  font-weight: bold;
 }
 
 .lose{
   display: inline-block;
   position: relative;
-  padding: 8px 12px;
+  padding: 8px 6px;
   border-radius: 20px;
   background-color: hsl(0, 100%, 43%);
-  color: hsl(144, 100%, 1%);;
-  font-size: 13px;
-  /* font-weight: bold; */
+  color:  hsl(210, 0%, 100%);
+  font-size: 10px;
+  font-weight: bold;
 }
